<?xml version="1.0"?>
<package format="3">
  <name>picking_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for MuJoCo + ros2_control + MoveIt Servo peg-in-hole.</description>

  <maintainer email="qiuzhitao94@gmail.com">qiuzhitao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>mujoco_ros2_control</exec_depend>
  <exec_depend>picking_description</exec_depend>
  <exec_depend>picking_moveit_config</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>yaml_cpp_vendor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
