<?xml version="1.0"?>
<package format="3">
  <name>picking_description</name>
  <version>0.0.1</version>
  <description>Panda description and MuJoCo model resources for the peg-in-hole system.</description>

  <maintainer email="qiuzhitao94@gmail.com">qiuzhitao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
