<?xml version="1.0"?>
<package format="3">
  <name>picking_moveit_config</name>
  <version>0.0.1</version>
  <description>MoveIt configuration package for Servo-first peg-in-hole experiments.</description>

  <maintainer email="qiuzhitao94@gmail.com">qiuzhitao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
