<?xml version="1.0"?>
<package format="3">
  <name>picking_pinocchio_solver</name>
  <version>0.0.1</version>
  <description>Pinocchio-based diagnostics and IK baseline for peg-in-hole.</description>

  <maintainer email="qiuzhitao94@gmail.com">qiuzhitao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>